--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.2",
     "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.5.1",
     "tailwindcss": "^4.0.16"
@@ -30,6 +31,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "react-easy-crop": "^4.7.5"
   }
 }
