--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongoose": "^8.13.1",
+    "multer": "^2.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
