--- a/scripts/.env
+++ b/scripts/.env
@@ -1,4 +1,4 @@
 SPOTIFY_CLIENT_ID=f41d0759e29c40359606173c8b642789
 SPOTIFY_CLIENT_SECRET=f31964332dbe4be69cb8bab4617deda3
-MONGODB_URI=mongodb://127.0.0.1:27017/autenticacionLocalYT
+MONGO_URI=mongodb+srv://oscarnzabarindamukeshimana:xtpjWtA27YqlN7kp@cluster0.vaqhyh9.mongodb.net/
 LASTFM_API_KEY=436c640a20d499d46f50b78a1410b067
